--- a/main/static/apikey.html
+++ b/main/static/apikey.html
@@ -44,10 +44,14 @@
     <div class="ui vertical section center aligned stackable grid container">
       <div class="row centered">
         <h3>Your <em id="is-test-only">test only</em> API key:</h3>
+      </div>
+      <div class="row centered">
         <h3><%-apikey%></h3>
-        <a href="swagger.html" target="_blank"><h3>Use it to get tokens with the API.</h3></a>
     </div>
+    <div class="row centered">
+      <a href="swagger.html" target="_blank"><h3>Use it to get tokens with the API.</h3></a>
   </div>
+</div>
 
   <div class="ui vertical footer segment">
     <div class="ui container">
