Reference TOS on site.

--- a/main/static/apikey.html
+++ b/main/static/apikey.html
@@ -66,7 +66,7 @@
         <div class="four wide column">
           <h4 class="ui header">Legal</h4>
           <div class="ui link list">
-            <a href="lib/tos.html" target="_blank" class="item">Terms of Service</a>
+            <a href="https://overhide.io/lib/tos.html" target="_blank" class="item">Terms of Service</a>
           </div>
         </div>
         <div class="four wide column">
