--- a/main/static/register.html
+++ b/main/static/register.html
@@ -126,7 +126,7 @@
       assume that you are happy with this.
       <br/>
       <button class="ui button-nag basic green button space-top tiny" onclick="cookies_ok()">fine</button>
-      <a href="lib/tos.html" target="_blank"><button class="ui button-nag basic inverted button space-top tiny">privacy policy</button></a>
+      <a href="https://overhide.io/lib/tos.html" target="_blank"><button class="ui button-nag basic inverted button space-top tiny">privacy policy</button></a>
     </span>
     <i class="close icon" onclick="cookies_ok()"></i>
   </div>
@@ -144,7 +144,7 @@
         <div class="four wide column">
           <h4 class="ui header">Legal</h4>
           <div class="ui link list">
-            <a href="lib/tos.html" target="_blank" class="item">Terms of Service</a>
+            <a href="https://overhide.io/lib/tos.html" target="_blank" class="item">Terms of Service</a>
           </div>
         </div>
         <div class="four wide column">
