Fix verbiage on keys and tokens.

--- a/main/static/register.html
+++ b/main/static/register.html
@@ -94,7 +94,7 @@
     <div class="ui vertical section center aligned stackable grid container">
       <div class="row centered">
         <h3>Retrieve an API key.</h3>
-        <h4>By retrieving an API key you agree to keep this API key secret (in your secure back-end) for the purpose of retrieving and forwarding tokens to access overhide services.</h4>
+        <h4>Neither the API key nor the token retrieved with the key are authenticated secrets.  These are authorizing claims for use of the overhide.io systems.  They're used to allow the system to revoke session or &mdash; if necessary &mdash; application access to the system, in case of detected abuse.</h4>
       </div>
       <div class="row centered">
         <a href="swagger.html" target="_blank"><h4>Call the <em>/token</em> API from your backend to get a token from this API key.</h4></a>
